[gd_scene load_steps=2 format=3 uid="uid://b38ygkf2ltqdx"]

[ext_resource type="Script" path="res://scripts/playerbars.gd" id="1_tj5r3"]

[node name="Playerbars" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -952.0
offset_bottom = -548.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1_tj5r3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
process_mode = 3
layout_mode = 2
offset_right = 200.0
offset_bottom = 85.0

[node name="name_label" type="Label" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 1

[node name="hp_bar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
mouse_filter = 1

[node name="atb_bar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 1

[node name="ClickArea" type="Button" parent="."]
process_mode = 3
modulate = Color(0.454902, 1, 1, 1)
self_modulate = Color(1, 0.266667, 1, 1)
z_index = 9
layout_mode = 2
offset_right = 200.0
offset_bottom = 85.0
action_mode = 0
text = "
"

[connection signal="pressed" from="ClickArea" to="." method="_on_click_area_pressed"]
